--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon app.js",
+    "dev": "nodemon app.js",
+    "webpack": "webpack -w"
   },
   "repository": {
     "type": "git",
@@ -18,7 +20,16 @@
   },
   "homepage": "https://github.com/donthedeveloper/responsivebot#readme",
   "dependencies": {
+    "axios": "^0.16.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "chalk": "^1.1.3",
     "dotenv": "^4.0.0",
-    "tmi.js": "^1.2.1"
+    "express": "^4.15.3",
+    "morgan": "^1.8.1",
+    "tmi.js": "^1.2.1",
+    "webpack": "^2.5.1"
   }
 }
