--- a/package.json
+++ b/package.json
@@ -29,6 +29,13 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "morgan": "^1.8.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
+    "socket.io": "^2.0.1",
     "tmi.js": "^1.2.1",
     "webpack": "^2.5.1"
   }
